# yandex_kinoservice

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose-metrics.yml  docker-compose-tests.yml  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
docs/: c4.drawio  docs.md  (+2 more)
docs/compare-mongodb-vs-postgres/research/: Dockerfile  config.py  insert_one_row.py  main.py  pg_research.py  pyproject.toml  start_research.sh
docs/compare-mongodb-vs-postgres/research/postgres_research/: create_tables.py
docs/comparison_column_db/: README.md  clickhouse.py  docker-compose-comparsion.yml  pyproject.toml  vertica.py
docs/comparison_column_db/conf_clickhouse/: config.xml  users.xml
libs/auth_utils/: pyproject.toml
libs/auth_utils/auth_utils/: __init__.py  auth_utils_config.py  check_auth.py
libs/tracer_utils/: pyproject.toml
libs/tracer_utils/tracer_utils/: __init__.py  tracer.py  tracer_config.py  tracer_decorator.py  tracer_middware.py
services/async-api/src/: Dockerfile  main.py  pyproject.toml
services/async-api/src/api/v1/filmwork/: filmwork.py
services/async-api/src/api/v1/internal/: internal_api.py  schemas.py
services/async-api/src/core/: config.py
services/async-api/src/models/: schemas_logic.py
services/async-api/src/services/: filmwork.py
services/async-api/src/suppliers/: base_supplier.py  rec_profile.py  statistic_supplier.py
services/auth-service/src/: Dockerfile  Dockerfile.debug  main.py  pyproject.toml
services/auth-service/src/api/v1/auth/: schemas.py
services/auth-service/src/core/: config.py
services/auth-service/src/migration/: env.py
services/auth-service/src/migration/versions/: 2b2894b61ad0_add_table_profile_settings.py
services/auth-service/src/models/: models.py
services/auth-service/src/services/: auth_repository.py  auth_service.py
services/auth-service/tests/functional/: pyproject.toml
services/content-actions-service/src/: pyproject.toml
services/content-actions-service/src/adapters/: notification_adapter.py
services/content-actions-service/src/core/: config.py  logger_config.py
services/content-actions-service/src/services/: base_repository.py  bookmark_service.py  rating_repository.py  rating_service.py
services/content-actions-service/src/utils/: aiokafka_conn.py  connectors.py
services/embedding-service/src/: Dockerfile  main.py  pyproject.toml
services/embedding-service/src/api/v1/: embedding_api.py
services/embedding-service/src/core/: config.py  gunicorn_conf.py  logger_conf.py
services/embedding-service/src/utils/: exceptions_handlers.py
services/embedding-service/tests/functional/: Dockerfile  conftest.py  pyproject.toml  start-tests.sh
services/embedding-service/tests/functional/core/: config_log.py  settings.py
services/embedding-service/tests/functional/plugins/: fixture_aiohttp.py  fixture_asyncio.py
services/embedding-service/tests/functional/src/: test_embedding.py
services/embedding-service/tests/functional/utils/: decorators.py  wait_for_api.py
services/event-generator/src/: Dockerfile  Dockerfile.debug  main.py  pyproject.toml
services/event-generator/src/api/v1/: admin_api.py  schemes.py
services/event-generator/src/api/v1/notification-processor-mock/: mock_notification_processor.py  mock_schemas.py
services/event-generator/src/core/: config.py  gunicorn_conf.py  logger_config.py
services/event-generator/src/db/: cache.py  postgres.py
services/event-generator/src/models/: logic_models.py  models.py
services/event-generator/src/scripts/: entrypoint.sh  entrypoint_debug.sh  run_celery.sh
services/event-generator/src/services/: connector_repository.py  notification_sheduler_service.py  template_service.py
services/event-generator/src/services/repository/: base_repository.py  tamplate_repository.py
services/event-generator/src/tasks/: celery_config.py  scheduled.py
services/event-generator/src/utils/: connectors.py  decorators.py  exceptions_handlers.py
services/nl-consumer/src/: example_spacy.py  main.py  pyproject.toml
services/nl-consumer/src/core/: config.py
services/nl-consumer/src/services/: base_service.py  nlp_service.py
services/nl-consumer/src/suppliers/: embedding_supplier.py  film_supplier.py
services/nl-consumer/src/utils/: http_decorators.py
services/notification-service/src/: main.py  pyproject.toml
services/notification-service/src/core/: config.py  logger_config.py
services/notification-service/src/db/: postgres.py
services/notification-service/src/migration/: env.py
services/notification-service/src/migration/versions/: 2025_06_28_2040-14449df71b25_create_schemes.py  2025_07_04_2055-87e12665f9ea_init_notification_tables.py
services/notification-service/src/models/: enums.py  logic_models.py  models.py  models_enum.py
services/notification-service/src/services/: base_service.py  notification_service.py
services/notification-service/src/services/processors/: enricher.py  priority_manager.py  sender.py  single_notification_processor.py
services/notification-service/src/services/repository/: notification_repository.py
services/notification-service/src/suppliers/: user_profile_supplier.py
services/notification-service/src/utils/: connectors.py  decorators.py  http_decorators.py
services/statistic-service/src/: Dockerfile  main.py  pyproject.toml
services/statistic-service/src/api/v1/: schemas.py  statistic_api.py
services/statistic-service/src/core/: config.py  logger_conf.py
services/statistic-service/src/db/: abstract.py  clickhouse.py
services/statistic-service/src/services/: trends_service.py
services/statistic-service/src/utils/: connectors.py  exceptions_handlers.py
services/ws_notification-service/src/: Dockerfile  main.py  pyproject.toml
services/ws_notification-service/src/api/v1/: ws_sender.py
services/ws_notification-service/src/core/: config.py  logger_conf.py
services/ws_notification-service/src/models/: models.py
services/ws_notification-service/src/storage/: cache.py  messagebroker.py
services/ws_notification-service/src/utils/: connectors.py
(+51 files in other folders)
