[project]
name = "monorepo-tools"
version = "0.1.0"
description = "Common development tools"
requires-python = ">=3.12,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
elasticsearch = { extras = ["async"], version = ">=8.13.2,<9.0.0" }
backoff = "2.2.1"
flask = ">=3.1.1,<4.0.0"
rate-limite-utils = { path = "libs/rate_limite_utils" }
auth-utils = { path = "libs/auth_utils" }
tracer = { path = "libs/tracer_utils" }
apiflask = "^2.4.0"
kafka-python = "^2.2.10"
pyjwt = ">=2.9.0,<2.10.0"
flask-limiter = "^3.12"
wemake-python-styleguide = "^1.1.0"
uvicorn = "^0.34.3"
dotenv = "^0.9.9"
ujson = "^5.10.0"
types-ujson = "^5.10.0.20250326"
mypy = "1.13.0"
pytest = "^8.4.1"
sqlalchemy = "^2.0.41"
pytest-asyncio = ">=0.26.0,<1.0.0"
passlib = "^1.7.4"
sentry-sdk = "^2.30.0"
pika = "^1.3.2"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
orjson = "^3.10.18"
aio-pika = "^9.5.5"
numpy = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = ">=4.1.0,<5.0.0"
isort = ">=6.0.0,<7.0.0"
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.1.2,<8.0.0"
debugpy = ">=1.8.13,<2.0.0"
ipython = ">=9.1.0,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | migrations
    | migration
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",
    "W503",
    "C812",
    "C813",
    "C814",
    "C815S",
    "C816",
    "WPS300",
    "WPS111",
    "WPS431",
    "WPS226",
    "WPS110",
    "WPS404",
    "WPS601",
    "WPS237",
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "migration",
    "migrations",
    "services/auth-service/src/migration",
    "services/auth-service/src/migrations",
    "services/admin-panel/src/accounts/migrations",
    "services/notification-service/src/migration",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = false
ignore_missing_imports = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = "redis.asyncio"
ignore_missing_imports = true
