[project]
name = "comparison-column-db"
version = "0.1.0"
description = "Сравнение колоночных БД"
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "vertica-python (==1.4.0)",
    "faker (==37.3.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "clickhouse-driver (>=0.2.9,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
