[project]
name = "auth_utils"
version = "0.1.0"
description = "Библиотека для авторизации пользователей в сервисах"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "dotenv>=0.9.9,<1.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "redis>=5.3.0,<6.0.0",
    "backoff>=2.2.1,<3.0.0"
]

[tool.poetry]
packages = [{include = "auth_utils"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
