[project]
name = "auth-service"
version = "0.1.0"
description = "Authentication microservice"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[all]>=0.115.12,<1.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "alembic>=1.15.2,<2.0.0",
    "uvicorn>=0.34.1,<1.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "pydantic-settings>=2.8.1,<3.0.0",
    "greenlet>=3.2.0,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
    "typer>=0.15.2,<1.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    "redis>=5.2.1,<6.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "async-fastapi-jwt-auth[asymmetric]>=0.6.6,<1.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "aiohttp (>=3.11.18,<4.0.0)",
    "pytz (>=2025.2,<2026.0)"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
