[project]
name = "nl-consumer"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "sentence-transformers (>=5.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
