[project]
name = "clickhouse-service"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[all] (==0.115.0)",
    "uvicorn (==0.35.0)",
    "gunicorn (==23.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "aiochclient[httpx] (==2.6.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
